Primer article terminado

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,11 @@ nav{
 
 header{
     position: relative;
-    z-index: 1;
+    z-index: 2;
+    min-height: 600´x;
 }
 
-/*HEADER*/
+/*NAVBAR*/
 
 .header__logo{
     width: 133px;
@@ -50,6 +51,8 @@ padding: 7px 17px;
     margin: 28px 55px;
     display: inline-block;
 }
+
+/* FORMULARIO */
 
 .titulo{
     font-size: 50px;
@@ -116,6 +119,51 @@ padding: 7px 17px;
     rgba(0,0,0,0.8)0%
     rgba(0,0,0,0)60%
     rgba(0,0,0,0.8)100%);
-
 }
 
+/* ARTICLE 1 */
+
+article{
+    border-bottom: 8px solid #222;
+}
+
+article:nth-child(3){
+    margin-top: 262px;
+    border-top: 8px solid #222;
+}
+
+.section__contenido{
+    max-width: 60%;
+    margin: 25px auto;
+    padding-bottom: 50px;
+}
+
+.columna{
+    width: 40%;
+    display: inline-block;
+}
+
+.columna:first-child{
+    margin-right: 10%;
+}
+
+.section__imagen{
+    width: 100%;
+}
+
+.section__video{
+    width: 73%;
+    position: absolute;
+    top: 22%;
+    left:18% ;
+}
+
+.section__animacion{
+    position: relative;
+    top:55px;
+}
+
+.video{
+    width: 90%;
+    height: 90%;
+}
